--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -158,8 +158,8 @@ main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h
 /* s */
 main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h1:nth-child(3) {
     font-family: "Poppins" ;
-    font-size: 75px;
-    color: #7ecb79;
+    font-size: 60px;
+    color: #FFA500;
     margin-top: 16px;
     margin-bottom: 16px;
     text-shadow: 5px 10px 6px rgba(0, 0, 0, 0.1);
@@ -167,7 +167,7 @@ main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h
 /* rest of the name */
 main > section:nth-child(1) > section > div:first-child > aside:nth-child(1) > h1:nth-child(3) > span {
     font-family: "Comic Sans MS";
-    font-size: 65px;
+    font-size: 58px;
     color: #8a0583;
 }
 
