--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -711,3 +711,29 @@ main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth
 }
 
 /* skill */
+
+
+.skillTitle{
+    text-align: center;
+    font-size: 20px;
+    font-family: "Poppins", sans-serif;
+}
+.SkillLogo{
+    display: inline-flex;
+    background: linear-gradient(135deg, rgba(255,255,255,0.1),rgba(255,255,255,0));
+    -webkit-backdrop-filter: blur(20px);
+    box-shadow: 0 8px 32px 0 rgba(0,0,0,0.37);
+    border: 1px solid rgba(255,255,2550.18);
+    border-radius: 32px;
+    width: 800px;
+    height: 200px;
+    align-items: center;
+    alignment: center;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 25%;
+}
+
+.skillLogo img{
+    padding: 10px;
+}
