--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -737,3 +737,5 @@ main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth
 .SkillImg{
     padding: 10px;
 }
+
+/* gallery */
