--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -739,3 +739,78 @@ main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth
 }
 
 /* gallery */
+
+
+main > section:nth-child(5) {
+    position: relative;
+    top: 0;
+    width: 100%;
+    background: #ECF0F3;;
+}
+main > section:nth-child(5) > section:first-child {
+    position: relative;
+    text-align: center;
+    padding-top: 0;
+}
+main > section:nth-child(5) > section:first-child > h1 {
+    font-family: Ubuntu, sans-serif;
+    font-size: 50px;
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 7px;
+    padding-bottom: 18px;
+}
+main > section:nth-child(5) > section:first-child > h1::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 120px;
+    height: 2px;
+    background: #ddd;
+    bottom: 2px;
+    left: calc(50% - 60px);
+    border-radius: 2px;
+}
+/**
+* added section positions gallery section
+*/
+main > section:nth-child(5) > section:nth-child(2) {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 60px;
+    padding-bottom: 7px;
+}
+
+/**
+* added section display type grid
+*/
+main > section:nth-child(5) > section:nth-child(2) > section:first-child {
+    width: 1100px;
+    margin-left: 70px;
+    margin-right: 70px;
+    height: 600px;
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+    gap: 9px;
+}
+
+/**
+* customized all divs
+*/
+main > section:nth-child(5) > section:nth-child(2) > section:first-child > div {
+    box-shadow: 1px 2px 3px 1px rgba(0, 0, 0, 0.68);
+    border-radius: 15px;
+}
+
+/**
+ * Customized 01 Image
+ */
+main > section:nth-child(5) > section:nth-child(2) > section:first-child > div:first-child {
+    grid-row: 1/2;
+    grid-column: 1/3;
+    background: url("../img/gallery/img_1.jpg") center;
+    background-size: cover;
+}
