--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -738,6 +738,9 @@ main > section:nth-child(2) > section:nth-child(3) > div:first-child > aside:nth
     padding: 10px;
 }
 
+/* project section */
+
+
 /*  gallery section */
 
 main > section:nth-child(5) {
