--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -295,7 +295,7 @@ main > section:first-child > section > div:first-child > div:nth-child(3) {
 
 /* home image */
 main > section:first-child > section > div:first-child > aside:nth-child(2) > div:first-child {
-    background: url(../image/TechnoH-removebg-preview.png);
+    background: url(../image/gif.gif);
     width: 400px;
     height: 400px;
     background-size: cover;
