--- a/pages/assets/style/assignment.css
+++ b/pages/assets/style/assignment.css
@@ -25,3 +25,107 @@ main>section{
     height: 1030px;
     /*background-color: #00F461;*/
 }
+/*project section grid*/
+#projectSect{
+    /*border: 2px solid black;*/
+    position: relative;
+    top: 235px;
+    height: 868px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 50px;
+    padding-left: 85px;
+}
+
+/* assignment  section*/
+/*Ayur Project*/
+/*projects div*/
+#projectSect>div{
+    /* From https://css.glass */
+    background: rgba(45, 10, 81, 0.58);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(45, 10, 81, 0.32);
+    width: 300px;
+    height: 380px;
+
+}
+
+/*ayur topic*/
+#Assignment1{
+    position: relative;
+    width: 429px;
+    height: 126px;
+    left: 59px;
+    top: -60px;
+    font-family: 'Arial';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 126px;
+    color: #FFFFFF;
+}
+
+#1-img{
+    position: relative;
+    width: 280px;
+    height: 280px;
+    top: -94px;
+    left: 9px;
+}
+
+
+#1-div{
+    position: absolute;
+    width: 150px;
+    height: 150px;
+    top: 83px;
+    left: 9px;
+    background-color: #1E17175E;
+    opacity: 0;
+}
+
+
+#1-p{
+    position: relative;
+    top: 41px;
+    left: 41px;
+    width: 207px;
+    font-size: 15px;
+    font-family: Arial;
+    color: #FFFFFF;
+    text-align: center;
+    line-height: 20px;
+    font-style: normal;
+    font-weight: 510;
+}
+
+#1-view{
+    position: relative;
+    top: 51px;
+    left: 96px;
+    width: 88px;
+    height: 33px;
+    opacity: 100%;
+    border-radius: 15px;
+    font-family: Arial;
+}
+
+#1-view:hover{
+    background-color: #701C7D;
+    font-weight: bold;
+    color: white;
+    box-shadow: 0px 1px 8px 3px white;
+    border: 3px solid #701C7D;
+    opacity: 100%;
+}
+
+#1-div:hover{
+    opacity: 100%;
+    transition-delay: 0s;
+    transition-property: all;
+    transition-duration: 0.5s;
+    cursor: pointer;
+}
