--- a/pages/assets/style/assignment.css
+++ b/pages/assets/style/assignment.css
@@ -17,7 +17,7 @@ body{
 
     color: #7ecb79;
 
-    opacity: 0.4;
+    opacity: 50%;
 }
 
 main>section{
@@ -41,13 +41,14 @@ main>section{
 /*projects div*/
 #projectSect>div{
     /* From https://css.glass */
-    background: #FFFFFF;
+    background: linear-gradient(to bottom, #FFFFFF, #7ecb79);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
-    border: 1px solid rgba(45, 10, 81, 0.32);
+   /* border: 1px solid rgba(45, 10, 81, 0.32);*/
     width: 300px;
     height: 380px;
+    border-radius: 10px;
 
 }
 
@@ -79,12 +80,12 @@ img{
 .As{
     position: absolute;
     width: 280px;
-    height: 250px;
+    height: 280px;
     top: 83px;
     left: 9px;
     background-color: #ffffff;
     opacity: 0;
-    border-radius: 10%;
+    border-radius: 10px;
 
 }
 
@@ -115,11 +116,11 @@ button{
 }
 
 button:hover{
-    background-color: #0ca205;
+    background-color: #7ecb79;
     font-weight: bold;
     color: white;
     box-shadow: 0px 1px 8px 3px white;
-    border: 3px solid #000000;
+    border: 1px solid #ffffff;
     opacity: 100%;
 }
 
@@ -130,3 +131,4 @@ button:hover{
     transition-duration: 0.5s;
     cursor: pointer;
 }
+
